# apollo-router

./: rust-toolchain.toml
.circleci/: config.yml
apollo-router/: Cargo.toml
apollo-router-scaffold/: Cargo.toml
apollo-router-scaffold/templates/base/: Dockerfile
apollo-router/src/: tracer.rs
apollo-router/src/plugins/telemetry/: mod.rs
apollo-router/src/services/: router_service.rs  supergraph_service.rs
dockerfiles/diy/dockerfiles/: Dockerfile.repo
dockerfiles/tracing/: docker-compose.zipkin.yml
dockerfiles/tracing/datadog-subgraph/: package-lock.json
dockerfiles/tracing/jaeger-subgraph/: package-lock.json
dockerfiles/tracing/zipkin-subgraph/: package-lock.json
docs/source/customizations/: custom-binary.mdx
xtask/: Cargo.toml
