[package]
name = "apollo-router-scaffold"
version = "1.43.0"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
edition = "2021"
license = "Elastic-2.0"
publish = false

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
cargo-scaffold = { version = "0.12.0", default-features = false }
regex = "1"
str_inflector = "0.12.0"
toml = "0.8.12"
[dev-dependencies]
tempfile = "3.10.1"
copy_dir = "0.1.3"
